--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -6,24 +6,11 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
 jobs:
   build:
-    runs-on: ubuntu-latest      
-    steps:
-    - name: checkout
-      uses: actions/checkout@v3
-
-    - name: Install doctl
-      uses: digitalocean/action-doctl@v2
-      with:
-        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-    - name: Build container image
-      run: docker build -t ${{ secrets.REGISTRY_NAME }}/crates-index-proxy:latest .
-
-    - name: Log in to DigitalOcean Container Registry with short-lived credentials
-      run: doctl registry login --expiry-seconds 1200
-
-    - name: Push image to DigitalOcean Container Registry
-      run: docker push ${{ secrets.REGISTRY_NAME }}/crates-index-proxy:latest
+    uses: open-rust-initiative/freighter/.github/workflows/do-common-build.yml@main
+    with:
+      image-name: crates-index-proxy:latest
+    secrets:
+      REGISTRY_NAME: ${{ secrets.REGISTRY_NAME }}
+      DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
